# Project-MorningStar

./: .dockerignore  .gitignore  .gitignore.new  BATCH_156_IMPLEMENTATION_VERIFICATION.md  BATCH_174_ANALYTICS_TEST_REPORT.json  CITATION.cff  CONTRIBUTING.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  GETTING_STARTED.md  MS11_AUTO_DETECTION_AND_GUI.md  MS11_ENHANCEMENT_SUMMARY.md  MS11_INTERFACE_SUMMARY.md  MS11_LIVE_TESTING_GUIDE.md  MS11_NEXT_STEPS.md  MS11_PUBLISHING_CHECKLIST.md  MS11_RUNNING_GUIDE.md  Makefile  NOTES.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  android_ms11.db  codex_validation_batch_044.py  codex_validation_batch_045.py  codex_validation_batch_046.py  codex_validation_check.py  conftest.py  discord_bridge.py  discord_dm_bot.py  discord_relay.py  docker-compose.yml  game_bridge.py  main.py  main_discord_bot.py  main_state_runner.py  ms11_auto_config.py  ms11_dashboard.py  ms11_setup_wizard.py  package-lock.json  (+25 more)
archive/backups/consolidated/backup_20250806_001113/: BATCHES_027_035_IMPLEMENTATION_SUMMARY.md  BATCH_075_FINAL_SUMMARY.md  BATCH_078_FINAL_SUMMARY.md  BATCH_085_FINAL_SUMMARY.md  BATCH_090_FINAL_SUMMARY.md  BATCH_096_FINAL_SUMMARY.md  BATCH_146_FINAL_STATUS.md  BATCH_147_FINAL_STATUS.md  BATCH_148_FINAL_STATUS.md  BATCH_154_FINAL_STATUS.md  BATCH_157_FINAL_STATUS.md  BATCH_161_FINAL_STATUS.md  BATCH_173_IMPLEMENTATION_TEST_REPORT.json  BATCH_185_VERIFICATION_20250805_180443.json  BATCH_193_TEST_REPORT_20250805_222451.json  BATCH_194_TEST_REPORT_20250805_234155.json  BATCH_195_TEST_REPORT_20250805_232528.json  BATCH_195_TEST_REPORT_20250805_233340.json  BATCH_STATUS_UPDATE.md  PROJECT_IMPROVEMENTS.md  demo_keybinding_scanner.py  demo_preflight_check.py  demo_quest_scraper.py  main.py  pyproject.toml  requirements.txt  simple_main.py  test_batch_020_mount_handler.py  test_batch_021_planetary_travel.py  test_batch_028_keybinding_scanner.py  test_batch_033_quest_profiler.py  test_batch_034_trainer_locator.py  test_batch_035_session_recovery.py  test_batch_036_combat_manager.py  test_batch_040_fallback_nav.py  test_batch_047_smart_quest_detection.py  test_batch_049_keybind_detection.py  test_batch_050_planetary_travel.py  test_batch_054_npc_detector.py  test_batch_055_progress_tracker.py  (+44 more)
archive/backups/consolidated/backup_20250806_001113/api/: get_sessions_by_user.py  session_bridge.py  submit_bug.js  submit_vote.py
archive/backups/consolidated/backup_20250806_001113/bridge/: session_uploader.py
archive/backups/consolidated/backup_20250806_001113/cli/: build_analyzer_cli.py  combat_manager.py
archive/backups/consolidated/backup_20250806_001113/combat/: combat_range.py
archive/backups/consolidated/backup_20250806_001113/config/: bazaar_config.json  crafting_config.json  fleet_plan.json  keybind_template.json  licenses.json  loot_targets.json  mount_config.json  multi_character_config.json  recovery_config.json  start_location.json  user_config_template.json
archive/backups/consolidated/backup_20250806_001113/dashboard/: app.py  session_controls.js  session_sync.py
archive/backups/consolidated/backup_20250806_001113/data/: dangerous_macros.json  dialogue_nlu_training.json  environmental_risk_zones.json  goals.json  legacy_steps.json  loot_table.py  mounts.yaml  planetary_routes.json  preflight_report.json  quest_chains.json  quest_sources.json  rare_loot_database.json  ship_config.json  shuttle_routes.yaml  shuttles.json  travel_config.json  waypoints.json
archive/backups/consolidated/backup_20250806_001113/data/raw/: .gitkeep
archive/backups/consolidated/backup_20250806_001113/docs/: SEO.md  collection_tracker.md  special_goals.md
archive/backups/consolidated/backup_20250806_001113/interactions/: npc_interactor.py
archive/backups/consolidated/backup_20250806_001113/modules/: environmental_awareness.py  quest_monitor.py  weapon_swap_system.py
archive/backups/consolidated/backup_20250806_001113/optimizer/: gear_advisor.py
archive/backups/consolidated/backup_20250806_001113/plugins/: __init__.py
archive/backups/consolidated/backup_20250806_001113/profiles/: legacy_profile.py  profession_plan.json  trainers.json
archive/backups/consolidated/backup_20250806_001113/relaybot/: bot.py
archive/backups/consolidated/backup_20250806_001113/requirements/: dev.txt
archive/backups/consolidated/backup_20250806_001113/scripts/: codex_validation_batch_052.py  qa_browser_tester.py  qa_dashboard.py  qa_metadata_validator.py  reorganize_project.py
archive/backups/consolidated/backup_20250806_001113/session_logs/: session_demo_session_1754005837.json  session_integration_test_1754005855.json  session_integration_test_1754005928.json  session_tracking_demo_1754005837.json
archive/backups/consolidated/backup_20250806_001113/src/: quest_engine.py  quest_selector.py
archive/backups/consolidated/backup_20250806_001113/swgdb_site/: GSC_SETUP_GUIDE.md  robots.txt  sitemap.xml
archive/backups/consolidated/backup_20250806_001113/travel/: __init__.py  ship_travel.py
archive/backups/consolidated/backup_20250806_001113/utils/: db.py  keybind_validator.py  license_hooks.py  lockout_tracker.py  ocr_scanner.py  starport_detector.py
(+2239 files in other folders)
